style.css
body {
  font-family: 'Lora';
  margin: 0;
  padding: 0;
  background-color: #d1a7a0;
}

header {
  background-color: #b69992;
  /*border-bottom: 1px solid #ddd;*/
  padding: 20px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}

nav {
  float: right;
  font-family: 'Lora';
}

nav li {
  display: inline-block;
}

header h1 {
  margin: 0;
  padding: 0;
}

.navbar {
  overflow: hidden;
}

.navbar a {
  float: left;
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-family: 'Lora';
  font-weight: bold;
  font-size: 23px;
}

.navbar img {
  height: 30px;
  margin-right: 20px;
}

.navbar a:hover {
  /*background-color: #869f77;*/
  color: black;
}

main {
  margin-top: 80px;
  padding: 20px;
  padding-top: 30px;
  background-color: #d1a7a0;
}

.welcome-message {
  margin-right: 20px;
  padding-top: 50px;
  display: inline-block;
  vertical-align: top;
}

.welcome-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding-left: 60px;
  padding-right: 60px;
  padding-top: 60px;
}

.welcome-message h2 {
  font-size: 70px;
  font-weight: bold;
  margin: 0;
}


.circle {
  border-radius: 50%;
}

.profile-image {
  display: inline-block;
  vertical-align: top;
  margin-left: 20px;
}

.profile-image img {
  width: 350px;
  border-radius: 50%;
}

section {
  margin-bottom: 40px;
}

h2 {
  font-size: 24px;
  font-weight: bold;
  margin: 0 0 20px 0;
  padding: 0;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

footer {
  background-color: #FFFFF0;
  /*border-top: 1px solid #ddd;*/
  padding: 20px;
  text-align: center;
  /*position: absolute;*/
  bottom: 0;
  left: 0;
  right: 0;
}

.introstatement {
  text-align: left;
  padding-left: 100px;
  padding-right: 100px;
  padding-top: 120px;
  padding-bottom: 30px;
  font-family: 'Lora';
  /*font-weight: bold;*/
  font-size: 22px;
}

